fix body overflow

--- a/css/kimchi.css
+++ b/css/kimchi.css
@@ -7,6 +7,7 @@
 
 html, body {
     width: 100%;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, p {
@@ -400,10 +401,45 @@ h1, h2, h3, p {
 .glider-contain {
     margin-top: 6rem;
 }
+@media (max-width: 700px){
+    .glider-contain {
+        width: 85%;
+    }
+}
+
+.gli-cont{
+    padding-top: 4rem;
+}
 
 .testimonial-card {
-    background-color: #858585;
-    height: 400px;
-    width: 300px;
-    margin: 3rem auto 0;
+    height: 220px;
+    width: 280px;
+    margin: 0 auto 0.5rem;
+    border-radius: 10px;
+    overflow: visible;
+    position: relative;
+    padding: 1px 1rem;
+    /* box-shadow: 4px 6px 4px -2px rgba(0,0,0,0.11), 
+    -4px 0px 4px -2px rgba(0,0,0,0.11),
+    0px -3px 4px -2px rgba(0,0,0,0.11); */
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1), 0 3px 6px rgba(0,0,0,0.05);
 }
+
+.testimonial-img{
+    display: block;
+    position: absolute;
+    height: 125px;
+    width: 125px;
+    left: 28%;
+    top: -60px;
+    /* margin: -5rem auto 0; */
+}
+
+.testimonial-text {
+    margin-top: 6rem;
+    color: #809CA2;
+    text-align: center;
+    font-style: italic;
+    font-weight: 600;
+}
+
